fix: avoid draggin screen on mobiles

--- a/exploring-js/13/src/css/style.css
+++ b/exploring-js/13/src/css/style.css
@@ -2,10 +2,11 @@
  * COMMON
  */
 html, body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 main {
+  position: fixed;
   width: 100%;
   height: 100%;
 }
@@ -14,7 +15,7 @@ body, canvas {
   text-align: center;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  user-select: none;
 }
 
 body {
